--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "20.16.10",
+    "@types/prop-types": "^15.7.13",
     "@types/react": "18.3.10",
     "@types/react-dom": "^18",
     "postcss": "^8",
